# nanoframe

./: .gitignore  LICENSE  README.md  project.toml  setup.cfg
docs/: index.md  usage.md
examples/: aggression.py  arithmetic.py  basic_usage.py  filtering.py  io_csv.py  missing_data.py
src/nanoframe/: __init__.py  exceptions.py  frame.py  io.py  series.py  utils.py
