[metadata]
name = nanoframe
version = 0.0.1
author = BlazeMC404
author_email = blazemc404@gmail.com
description = A minimalist and lightweight Python data processing library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BlazeMC404/nanoframe
project_urls =
    Bug Tracker = https://github.com/BlazeMC404/nanoframe/issues
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
python_requires = >=3.7
include_package_data = true

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    flake8

[options.entry_points]
console_scripts =
    nanoframe = nanoframe.cli:main